--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,18 @@
   height: 70px;
   background-color: #24292e;
 }
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
 .nav-btn div {
   width: 35px;
   height: 5px;
   background-color: #fff;
   margin: 6px 0;
 }
-.nav-btn{
+.nav-btn {
   float: right;
   margin-top: 12px;
   margin-right: 15px;
@@ -22,7 +27,22 @@
   background-color: #031628;
   width: 300px;
   transition: 0.2s;
+  z-index: 9;
 }
-.navbar--wrapper.open{
+.navbar--wrapper.open {
   left: 0;
+}
+.map--container > div > div {
+  position: relative !important;
+}
+.textbox--container {
+  text-align: center;
+  margin: 20px 0;
+}
+.textbox--container input,
+.textbox--container button {
+  height: 27px;
+}
+.textbox--container button {
+  cursor: pointer;
 }
